<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_welcome" />

        <Button
            android:id="@+id/btn_main_new_record"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ios_textview_style"
            android:text="@string/btn_main_new_record" />
        <!--
        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btn_main_uptade_"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/ios_textview_style"
            android:text="@string/btn_main_uptade" />-->
        <Button
            android:id="@+id/btn_main_musterileri_goster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/ios_textview_style"
            android:hint="@string/btn_main_musterileri_goster"
            android:text="@string/txt_main_mus_bilgileri" />

    </LinearLayout>
</LinearLayout>
